# pilar-fydp

./: .gitignore  README.md  pyproject.toml
Output/: event1.txt  event2.txt  file_seeding.sh
Sampledata/: BGL.log.part0  BGL.log.part1  BGL.log.part10  BGL.log.part11  BGL.log.part12  BGL.log.part2  BGL.log.part3  BGL.log.part4  BGL.log.part5  BGL.log.part6  BGL.log.part7  BGL.log.part8  BGL.log.part9
SourceCode/: Common.py  DictSummary.py  DictionarySetUp.py  Main.py  Parser.py  evaluator.py
