[tool.poetry]
name = "pilar-fydp"
version = "0.1.0"
description = ""
authors = ["Aaron Abraham <aaron.abraham@uwaterloo.ca>", "Yash Dani <yash.dani@uwaterloo.ca>", "Kevin Zhang <k299zhan@uwaterloo.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
pandas = "^2.1.1"
scipy = "^1.11.3"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"